Fix the white space on 992px viewport

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -203,7 +203,7 @@ hr {
   }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 1200px) {
   .racesGrid {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr;
